# torchkata

./: CMakeLists.txt  LICENSE  README.md
include/: mlpnet.hpp  torchkata.hpp
lib/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/gtest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lib/gtest/googlemock/gtest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: torchkata.cpp
test/: torchkataTest.cpp
